# mojawave-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: flask_webhook.py  live_smoketest.py  quickstart.py  send_with_webhook.py  test_sdk.py  webhook_listener.py
src/mojawave/: __init__.py  _transport.py  client.py  errors.py  models.py  webhooks.py
src/mojawave/resources/: __init__.py  credits.py  sms.py
tests/: conftest.py  test_errors_and_credits.py  test_sms.py  test_webhooks.py
