[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mojawave"
version = "1.0.0"
description = "Official Python SDK for the MojaWave API — SMS and transactional messaging for Tanzania."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "MojaWave" }]
keywords = ["mojawave", "sms", "tanzania", "otp", "messaging", "api", "sdk"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["requests>=2.25"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "responses>=0.23", "mypy>=1.0", "types-requests"]

[project.urls]
Homepage = "https://mojawave.com"
Documentation = "https://mojawave.com/docs"
Source = "https://github.com/mojawave/mojawave-python"

[tool.hatch.build.targets.wheel]
packages = ["src/mojawave"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/mojawave"]
